--- a/web/package.json
+++ b/web/package.json
@@ -13,8 +13,10 @@
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
@@ -54,8 +56,9 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-react": "^7.20.0",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.0.2"
