--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+node_modules
 /node_modules
+.pnp 
 /.pnp
 .pnp.js
 
 # testing
+coverage
 /coverage
 
 # production
+build
 /build
 
 # misc
@@ -22,3 +26,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.http
+
+data/
