--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "typeorm": "tsnd ./node_modules/typeorm/cli.js"
+    "typeorm": "tsnd -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config ./ormconfig.ts"
   },
   "husky": {
     "hooks": {
