--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,24 @@ services:
     ports:
       - "3000:3000"
     stdin_open: true
+
+  server:
+    container_name: node_server
+    build: ./server
+    command: yarn start
+    ports:
+      - "3333:3333"
+    volumes:
+      - ./server:/usr/src/app
+    depends_on:
+      - db
+
+  db:
+    container_name: pg
+    image: postgres:12-alpine
+    volumes:
+      - ./server/src/database/data/:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    env_file:
+      - ./server/.env
